# nexclock

./: .gitignore  Cargo.toml  README.md
src/: app.rs  component.rs  config.rs  constants.rs  defaults.rs  error.rs  event.rs  main.rs
src/data/: calendar_api.rs  ip.rs  mod.rs  system.rs  weather_api.rs
src/ui/: calendar.rs  clock.rs  grid.rs  mod.rs  secondary_clock.rs  status_bar.rs  system_stats.rs  weather.rs  world_clock.rs
