[package]
name = "nexclock"
version = "0.1.0"
edition = "2024"
description = "A TUI dashboard clock for Raspberry Pi Zero W + HyperPixel 4.0"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
tui-big-text = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
chrono = "0.4"
