[package]
name = "nexclock"
version = "0.1.0"
edition = "2024"
description = "A TUI dashboard clock for Raspberry Pi Zero W + HyperPixel 4.0"

[dependencies]
chrono = "0.4"
chrono-tz = "0.10"
crossterm = "0.28"
directories = "5"
ratatui = { version = "0.29", features = ["crossterm"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
toml = "0.8"
tui-big-text = "0.7"
